--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -18,4 +18,4 @@ RUN mkdir -p uploads results
 EXPOSE 8000
 
 # Start the FastAPI application (Railway will set PORT env var)
-CMD uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}
+CMD python -c "import os; import uvicorn; uvicorn.run('main:app', host='0.0.0.0', port=int(os.getenv('PORT', 8000)))"
